# streamlit-msal-2

./: .pylintrc  404.html  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements-dev.txt  requirements-docs.txt
.github/workflows/: cd.yml  ci.yml
assets/stylesheets/: style.css
docs/: index.md
docs/example/: requirements-example.txt
example/: app.py
example/.streamlit/: config.toml
example/readme/: index.html
reference/SUMMARY/: index.html
reference/streamlit_msal_2/: index.html
search/: search_index.json
src/streamlit_msal_2/: __init__.py
