[project]
name = "streamlit-msal-2"
version = "0.1.0"
description = "yet another msal Single-Sign-On module of streamlit applications also for ConfidentialClientApplication by checking required App roles of signed-in users in the enterprise setup"
authors = [
    { name = "xiepei1", email = "cn_xiepei@163.com" }
]
dependencies = [
    "streamlit",
    "streamlit-msal",
]
readme = "README.md"
requires-python = ">= 3.10"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Repository = "https://github.com/xiepei1/streamlit-msal-2"
Homepage = "https://github.com/xiepei1/streamlit-msal-2"
Issues = "https://github.com/xiepei1/streamlit-msal-2/issues"
Documentation = "https://github.com/xiepei1/streamlit-msal-2"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
