[project]
name = "streamlit-msal-2"
version = "0.2.1"
description = "yet another msal Single-Sign-On module of streamlit applications also for ConfidentialClientApplication by checking required App roles of signed-in users in the enterprise setup, and support obo flow"
authors = [
    { name = "xiepei1", email = "cn_xiepei@163.com" }
]
dependencies = [
    "streamlit",
    "streamlit-msal",
    "loguru",
]
readme = "README.md"
requires-python = ">= 3.10"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Repository = "https://github.com/xiepei1/streamlit-msal-2"
Homepage = "https://github.com/xiepei1/streamlit-msal-2"
Issues = "https://github.com/xiepei1/streamlit-msal-2/issues"
Documentation = "https://xiepei1.github.io/streamlit-msal-2/"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
